--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,17 +23,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity android:name=".SelectionActivity"/>
         <activity android:name=".SendActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SelectionActivity" />
-        </activity>
-        <activity android:name=".RecvActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".DeviceScanActivity" />
         </activity>
         <activity android:name=".DeviceScanActivity">
             <meta-data
