--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     api 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'org.apache.httpcomponents:httpclient:4.5.5'
+    api 'org.java-websocket:Java-WebSocket:1.3.8'
 }
